@@ -32,7 +32,7 @@
 import logging
 import sys
 
-__version_info__ = ('0', '6', '0')
+__version_info__ = ('0', '7', '0')
 __version__ = '.'.join(__version_info__) if (len(__version_info__) == 3) else '.'.join(__version_info__[0:3]) + "-" + __version_info__[3]
 __author__ = 'Youri Hoogstrate'
 __homepage__ = 'https://github.com/yhoogstrate/egfr-v3-determiner'
