@@ -1,0 +1,14 @@
+@HD	VN:1.4	SO:coordinate
+@SQ	SN:chrM	LN:16571
+@SQ	SN:chr1	LN:249250621
+@SQ	SN:chr2	LN:243199373
+@SQ	SN:chr3	LN:198022430
+@SQ	SN:chr4	LN:191154276
+@SQ	SN:chr5	LN:180915260
+@SQ	SN:chr6	LN:171115067
+@SQ	SN:chr7	LN:159138663
+@CO	user command line: STAR ...
+test.read:2:2450:22480:9737	163	chr7	55086928	255	2S131M122920N14M	=	55086928	123065	CTGTATTGATCGGGAGAGCCGGAGCGAGCTCTTCGGGGAGCAGCGATGCGACCCTCCGGGACGGCCGGGGCAGCGCTCCTGGCGCTGCTGGCTGCGCTCTGCCCGGCGAGTCGGGCTCTGGAGGAAAAGAAAGTTTGCCAAGGCTCG	F:FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF:F:FFFFFFFFFFFFFF:FFFF	NH:i:1	HI:i:1	AS:i:286	nM:i:2	XS:A:+	NM:i:1
+test.read:2:2450:22480:9737	83	chr7	55086928	255	2S131M122920N14M	=	55086928	-123065	CGGTATTGATCGGGAGAGCCGGAGCGAGCTCTTCGGGGAGCAGCGATGCGACCCTCCGGGACGGCCGGGGCAGCGCTCCTGGCGCTGCTGGCTGCGCTCTGCCCGGCGAGTCGGGCTCTGGAGGAAAAGAAAGTTTGCCAAGGCTCG	FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF	NH:i:1	HI:i:1	AS:i:286	nM:i:2	XS:A:+	NM:i:1
+test.read:2:2246:12888:9784	1187	chr7	55086935	255	2S94M3D27M122920N7M1S	=	55086936	123051	TTTCGGGAGAGCCCGAGCGAGCTCTTCGGGGAGCAGCGATGCGACCCTCCGGGACGGCCGGGGCAGCGCTCCTGGCGCTGCTGGCTGCGCTCTGCCCGAGTCGGGCTCTGGAGGAAAAGAAAGTTTGCCAG	,,FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF:FFFFFFFFFFFF:FFFFF::FF,:FFFF:FFFFFFFFFFFFFFFFFFFFFF:FFF:FFF,FFF:	NH:i:1	HI:i:1	AS:i:235	nM:i:2	XS:A:+	NM:i:4
+test.read:2:2246:12888:9784	1107	chr7	55086936	255	3S93M3D27M122920N7M1S	=	55086935	-123051	GGGCGGGAGAGCCCGAGCGAGCTCTTCGGGGAGCAGCGATGCGACCCTCCGGGACGGCCGGGGCAGCGCTCCTGGCGCTGCTGGCTGCGCTCTGCCCGAGTCGGGCTCTGGAGGAAAAGAAAGTTTGCCAG	FFFFFFFFFFFFFFFFFFFFFFFF,FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF:FFFFFFFFFF:FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF:FFFFFFFFFFFFFF	NH:i:1	HI:i:1	AS:i:235	nM:i:2	XS:A:+	NM:i:4
